# LifeIsBorneAlpha

./: CMakeLists.txt  README.md
Assets/Inputs/Context/: ContextList.json
Assets/Inputs/Context/Contexts/: Game.json  Menu.json  RawMenu.json
Assets/Inputs/InputMapping/: InputMapList.json
Assets/Inputs/InputMapping/Maps/: Game.json  Menu.json  RawMenu.json
Confs/Controls/: Default.json
Ressources/json/Textures/Character/: Boris.json  Carapuce.json
src/: GameAction.hpp  GamePhases.hpp  GameState.hpp  GlobalConf.cpp  GlobalConf.hpp  PlayerMode.hpp  core.cpp  core.hpp  main.cpp
src/Components/: AComponent.hpp
src/Components/Body/: BodyPartType.hpp  CGraphicalBody.cpp  CGraphicalBody.hpp  GraphicalBodyPart.cpp  GraphicalBodyPart.hpp
src/Components/Collision/: Hitbox.hpp
src/Components/Common/: CDirection.hpp  CPosition.hpp
src/Components/Graphical/: Animation.hpp
src/Components/Graphical/Body/: BodyPart.cpp  BodyPart.hpp  BodyPartType.hpp  CBody.cpp  CBody.hpp
src/Components/Stats/: CHp.hpp  CMana.hpp  COrientation.hpp  Hp.hpp  Mana.hpp  Orientation.hpp
src/Dungeon/: Cell.cpp  Cell.hpp  Dungeon.cpp  Dungeon.hpp  GenerationProfile.hpp  RoomGenerationMode.hpp  RoomPOD.hpp  TestRoom.cpp  TestRoom.hpp
src/Entities/: AComponent.cpp  AEntity.hpp  TestCharacter.cpp  TestCharacter.hpp
src/Factory/Component/BodyParts/: BodyPartFactory.cpp  BodyPartFactory.hpp
src/Manager/: IntroManager.hpp
src/Manager/ConfigManager/: ConfigManager.cpp  ConfigManager.hpp
src/Manager/EntityManager/: AEntity.hpp
src/Manager/EventManager/: EventManager.hpp  Receiver.hpp
src/Manager/EventManager/Events/: AEvent.cpp  AEvent.hpp  EventList.hpp  Events.hpp  InputEvents.hpp  MainEvent.hpp  ParamEvent.hpp  SceneEvents.hpp
src/Manager/InputManager/: BindingContextHelper.hpp  ControlProfile.cpp  ControlProfile.hpp  ControlerProfileManager.cpp  ControlerProfileManager.hpp  Controller.hpp  GameInput.hpp  InputConstant.hpp  InputControllerType.hpp  InputManager.cpp  InputManager.hpp  InputMapper.hpp  InputMode.hpp  MappedInput.cpp  MappedInput.hpp  PlayerInput.hpp  RangeConverter.hpp  RawInputConstant.hpp
src/Manager/InputManager/Buttons/: AButton.hpp  ControllerButton.hpp  KeyboardButton.hpp
src/Manager/InputManager/Context/: ContextList.hpp  ContextManager.hpp  InputContext.cpp  InputContext.hpp  InputContextManager.cpp  InputContextManager.hpp
src/Manager/InputManager/DirectionalInput/: ADIrectionalInput.hpp  ControllerButtons.hpp  GameDirectionalInput.hpp  JoystickDIrectionalInput.hpp  JoystickPos.hpp  MouseDirectionalInput.hpp
src/Manager/InputManager/HitMaps/: AControlMapping.cpp  AControlMapping.hpp
src/Manager/InputManager/HitMaps/Controller/: ControllerMapping.cpp  ControllerMapping.hpp
src/Manager/InputManager/HitMaps/Keyboard/: KeyboardMapping.cpp  KeyboardMapping.hpp
src/Manager/InputManager/InputController/: AInputController.cpp  AInputController.hpp  ButtonBind.hpp
src/Manager/InputManager/InputController/Controller/: Controller.cpp  Controller.hpp
src/Manager/Intro/: IntroManager.cpp  IntroManager.hpp
src/Manager/RessourceManager/: RessourceManager.cpp  RessourceManager.hpp  RessourceManagerCharacterLoader.cpp  RessourceManagerException.hpp  RessourceManagerSceneryLoader.cpp  RessourceManagerSpellLoader.cpp  TextureHandler.cpp  TextureHandler.hpp  TypeLoaded.hpp
src/Manager/RessourceManager/Loaders/: BodyPartLoader.hpp
src/Manager/SceneManager/: AScene.hpp  ScenesManager.cpp  ScenesManager.hpp
src/Scenes/: ForwardScene.hpp  SceneList.hpp
src/Scenes/Intro/: IntroScene.cpp  IntroScene.hpp  TextureId.hpp
src/Scenes/SalleArcade/: ArcadeScene.cpp  ArcadeScene.hpp  TextureId.hpp
src/Scenes/Test/: TestScene.cpp  TestScene.hpp
src/Systems/: ASystem.hpp  SystemLore.hpp  SystemManager.hpp  SystemManger.cpp
src/Systems/Animation/: SysAnimation.cpp  SysAnimation.hpp
src/Utils/: Position.hpp  Size.hpp
src/utils/: Interval.hpp  NonCopyable.hpp  Position.hpp  Singleton.hpp
